# school-timetable-creator

./: Cargo.toml  README.md  testdata.json
src/: main.rs
src/time_util/: mod.rs
src/timetable_data/: csv_calendar_serializer.rs  mod.rs  timetable_request.rs
