[package]
name = "school-timetable-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
native-dialog = "0.6.3"
sha256 = "1.1.2"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
]
